# glib-tutorials

./: .gitignore  README.md  ekran.html  main.c  meson.build
tutorials/: gobject-example.c  gobject-example.h  timeout-example.c  timeout_example.c  timeout_example.h
tutorials/common/: utils.c  utils.h
tutorials/gio-example/: notification-sender.c  notification-sender.h
tutorials/gobject-example/: example-person-private.h  example-person.c  example-person.h
tutorials/gstreamer-example/: screen_webrtc.html  screencast-webrtc.c  screencast-webrtc.h  screencast.c  screencast.h
tutorials/sound-exclusion/: sound_exclusion.c  sound_exclusion.h
tutorials/timeout-example/: timeout.c  timeout.h
